force-app/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <label>Offer</label>
    <nameField>
        <displayFormat>Offer-{0000}</displayFormat>
        <label>Offer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>