force-app/main/default/objects/Offer__c/fields/Is_Offer_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Offer_Expired__c</fullName>
    <formula>ISPICKVAL( Offer_Status__c , &quot;Pending&quot;) &amp;&amp;     TODAY() - DATEVALUE(CreatedDate) &gt; 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Offer Expired</label>
    <type>Checkbox</type>
</CustomField>