force-app/main/default/objects/Offer__c/fields/Joining_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Joining_Timeline__c</fullName>
    <formula>CASE(
    MONTH(Joining_Date__c),
    1, &quot;Q1&quot;,
    2, &quot;Q1&quot;,
    3, &quot;Q1&quot;,
    4, &quot;Q2&quot;,
    5, &quot;Q2&quot;,
    6, &quot;Q2&quot;,
    7, &quot;Q3&quot;,
    8, &quot;Q3&quot;,
    9, &quot;Q3&quot;,
    10, &quot;Q4&quot;,
    11, &quot;Q4&quot;,
    12, &quot;Q4&quot;,
    &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joining Timeline</label>
    <type>Text</type>
</CustomField>