force-app/main/default/objects/Offer__c/fields/Offered_Role__c.field-meta.xml
<CustomField>
    <fullName>Offered_Role__c</fullName>
    <formula>TEXT(Application__r.Job_Position__r.Job_Title__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offered Role</label>
    <type>Text</type>
</CustomField>