force-app/main/default/objects/Offer__c/fields/Salary_Offered__c.field-meta.xml
<CustomField>
    <fullName>Salary_Offered__c</fullName>
    <label>Salary Offered</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>