force-app/main/default/objects/Offer__c/listViews/Accepted_Offers.listView-meta.xml
<ListView>
    <fullName>Accepted_Offers</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Offer_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted Offers</label>
    <sharedTo>
        <role>HR_roles</role>
        <role>Hiring_Manager</role>
    </sharedTo>
</ListView>