force-app/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Joining_Date__c</columns>
    <columns>Salary_Offered__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>