force-app/main/default/objects/Offer__c/listViews/Joining_This_Week.listView-meta.xml
<ListView>
    <fullName>Joining_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Joining_Date__c</columns>
    <columns>Salary_Offered__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Joining_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Offer_Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Joining This Week</label>
    <sharedTo>
        <role>Onboarding_Team</role>
    </sharedTo>
</ListView>