force-app/main/default/objects/Offer__c/listViews/Offers_Sent_This_Month.listView-meta.xml
<ListView>
    <fullName>Offers_Sent_This_Month</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Offers Sent This Month</label>
    <sharedTo>
        <role>HR_Executive</role>
    </sharedTo>
</ListView>