force-app/main/default/objects/Offer__c/listViews/Rejected_Offers.listView-meta.xml
<ListView>
    <fullName>Rejected_Offers</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Offer_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Offers</label>
    <sharedTo>
        <role>HR_roles</role>
    </sharedTo>
</ListView>